@@ -706,6 +706,9 @@
 		<a href="#about-getitem">get item (item,number)</a><br>
 		
 	
+		<a href="#about-getitemdescription">get item description (ID, item)</a><br>
+		
+	
 		<a href="#about-getitemmaximumstacksize">get item maximum stack size (item)</a><br>
 		
 	
@@ -4660,6 +4663,14 @@ get hero name (1, find hero (leader))
 		<tt>
 		<b><font color="yellow">get item name (ID, item)</font></b><br>
 			This command will take the name of item #<span class="param">item</span> and stick it in string #<span class="param">ID</span>, overwriting its contents. This can be useful for "You got &lt;item&gt;!" type messages.<br>
+			
+			
+		</tt></p>
+		<a name="about-getitemdescription"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">get item description (ID, item)</font></b><br>
+			This command will take the description of item #<span class="param">item</span> and stick it in string #<span class="param">ID</span>, overwriting its contents.<br>
 			
 			
 		</tt></p>
@@ -11414,7 +11425,7 @@ end</pre>
 			</tt></p>
 
 		<hr>
-	<p>Stats: There are 778 commands in this file, of which 57 are only references to other commands.</p>
+	<p>Stats: There are 779 commands in this file, of which 57 are only references to other commands.</p>
 <p>This file was generated from an XML file. The contents were painstakingly transcribed by Mike Caron from the original Plotscripting Dictionary, which was created by James Paige.</p>
 </body>
 </html>
